# aifr-prototyping

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/mcp-aifr/: README.md  pyproject.toml  server.py
